--- a/src/main/resources/templates/listarUsuarios.html
+++ b/src/main/resources/templates/listarUsuarios.html
@@ -24,7 +24,7 @@
 <body>
 	
 	<!-- Menú lateral -->
-	<div th:replace="menu/layout :: menu"></div>
+	<div th:replace="menu/layout2 :: menu"></div>
 
 	<!-- Contenido principal -->
 	<div class="my-container" style="margin-left: 250px;">
