--- a/src/main/resources/templates/menu/layout.html
+++ b/src/main/resources/templates/menu/layout.html
@@ -25,7 +25,7 @@
                     </a>
                     <div class="collapse" id="usuarioSubmenu">
                         <ul class="list-unstyled ps-4">
-                            <li><a href="/listartodos" class="nav-link text-white">Listar Usuarios</a></li>
+                            <li><a href="/listarUsuarios" class="nav-link text-white">Listar Usuarios</a></li>
                         </ul>
                     </div>
 					<div class="collapse" id="usuarioSubmenu">
@@ -43,7 +43,7 @@
                     <div class="collapse" id="institucionesSubmenu">
                         <ul class="list-unstyled ps-4">
                             <li><a href="/institucion" class="nav-link text-white">Ingresar Institución</a></li>
-                            <li><a href="/listarinstituciones" class="nav-link text-white">Listar Instituciones</a></li>
+                            <li><a href="/listarinstitucionesAdmin" class="nav-link text-white">Listar Instituciones</a></li>
                         </ul>
                     </div>
                 </li>
@@ -69,7 +69,7 @@
                     <div class="collapse" id="rolUsuarioSubmenu">
                         <ul class="list-unstyled ps-4">
                             <li><a href="/asignarrol" class="nav-link text-white">Ingresar RolUsuario</a></li>
-                            <li><a href="/listarRolUsuarios" class="nav-link text-white">Listar RolUsuario</a></li>
+                            <li><a href="/listarRolUsuario" class="nav-link text-white">Listar RolUsuario</a></li>
                         </ul>
                     </div>
                 </li>
