--- a/src/main/resources/templates/listarEstudiantes.html
+++ b/src/main/resources/templates/listarEstudiantes.html
@@ -19,7 +19,7 @@
     <h2 class="mb-4" th:text="${titulo}">Lista de Usuarios</h2>
 
     <div class="mb-3">
-        <a th:href="@{/registrarEstudiantes}" class="btn btn-success">Registrar Nuevo Usuario</a>
+        <a th:href="@{/registrarEstudiantesAdministrador}" class="btn btn-success">Registrar Nuevo Usuario</a>
     </div>
 
     <!-- Mensajes flash -->
