--- a/src/main/resources/templates/menu/layout2.html
+++ b/src/main/resources/templates/menu/layout2.html
@@ -26,7 +26,7 @@
                     <div class="collapse" id="registroSubmenu">
                         <ul class="list-unstyled ps-4">
                             <li><a href="/registrarEstudiantes" class="nav-link text-white">Admision Tec Azuay</a></li>
-                            <li><a href="/listarUsuarios" class="nav-link text-white">Listar Estudiantes Admision</a></li>
+                            <li><a href="/listarEstudiantesDocentes" class="nav-link text-white">Listar Estudiantes Admision</a></li>
                         </ul>
                     </div>
                 </li>
