--- a/src/main/resources/static/css/styleM.css
+++ b/src/main/resources/static/css/styleM.css
@@ -8,7 +8,7 @@
 .hero-section {
     display: flex;
     flex-direction: column;
-    background-image: url('/imagenes/fondo.jpg'); /* reemplaza con la ruta correcta */
+    background-image: url('/imagenes/giblinIntituto.jpg'); /* reemplaza con la ruta correcta */
     background-size: cover;
     height: 100vh;
     width: 100%;
